feat: enhance configuration management, add readiness check, and improve CORS middleware

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,24 @@
-# Server Configuration
-PORT=8080
+# Server
+SERVER_PORT=8080
 GIN_MODE=debug
 
-# Database Configuration
-DB_TYPE=sqlite
-DB_PATH=./data/app.db
+# Auth
+JWT_SECRET=change-me-in-production
+JWT_EXPIRES_IN=24
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRY_HOURS=24
+# CORS (comma-separated list or *)
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # Logging
-LOG_FILE_PATH=./logs/app.log
+LOG_FILE_PATH=logs/app.log
 
-# CORS Configuration
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
-CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
-CORS_ALLOWED_HEADERS=Origin,Content-Type,Accept,Authorization,X-Requested-With
+# Database (sqlite | postgres | mysql)
+DB_TYPE=sqlite
+DB_PATH=core.db
 
-# Rate Limiting (requests per minute)
-RATE_LIMIT=100
-
-# Security
-BCRYPT_COST=12
+# Postgres/MySQL fields (used when DB_TYPE is postgres or mysql)
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=dbname
